<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.liquidadorzapatoszxy.principal">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sexo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marca"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLiquidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Liquidar" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
